unpackaged/main/default/objects/SLCA2__CA_Filters__c/SLCA2__CA_Filters__c.object-meta.xml
<CustomObject>
    <description>filter creteria settings for Calendar</description>
    <label>CA_Filters</label>
    <nameField>
        <label>CA_Filters Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_FiltersPlural</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>