unpackaged/main/default/objects/SLCA2__CA_Filters__c/fields/SLCA2__fieldName__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__fieldName__c</fullName>
    <label>fieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>