unpackaged/main/default/objects/SLCA2__CA_Filters__c/fields/SLCA2__fieldType__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__fieldType__c</fullName>
    <label>fieldType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>