unpackaged/main/default/objects/SLCA2__CA_Filters__c/fields/SLCA2__value__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__value__c</fullName>
    <label>value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>