unpackaged/main/default/objects/SLCA2__CA_Filters__c/listViews/SLCA2__All.listView-meta.xml
<ListView>
    <fullName>SLCA2__All</fullName>
    <columns>SLCA2__calendarId__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>SLCA2__fieldName__c</columns>
    <columns>SLCA2__fieldType__c</columns>
    <columns>SLCA2__operator__c</columns>
    <columns>SLCA2__order__c</columns>
    <columns>SLCA2__value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>